# vsomeip

./: AUTHORS  CMakeLists.txt  License_Notices.txt  README.md
config/: payload_test_client_multi.json  payload_test_service_multi.json  subscribe_notify_master.json  subscribe_notify_slave.json
examples/: CMakeLists.txt
examples/payload_tests/: payload_test_client.cpp  payload_test_client.hpp  payload_test_service.cpp  payload_test_service.hpp  readme.txt  someip_test_globals.hpp  stopwatch.cpp  stopwatch.hpp
examples/subscribe_notify_tests/: readme.txt  subscribe_notify_test_service.cpp
implementation/configuration/include/: internal.hpp  internal.hpp.in
implementation/configuration/src/: configuration_impl.cpp
implementation/endpoints/include/: local_client_endpoint_impl.hpp  local_server_endpoint_impl.hpp  netlink_connector.hpp
implementation/endpoints/src/: client_endpoint_impl.cpp  credentials.cpp  endpoint_impl.cpp  endpoint_manager_base.cpp  endpoint_manager_impl.cpp  local_client_endpoint_impl.cpp  local_server_endpoint_impl.cpp  netlink_connector.cpp  server_endpoint_impl.cpp
implementation/helper/1.75/boost/asio/detail/impl/: socket_ops_ext_local.ipp
implementation/helper/1.78/boost/asio/detail/: reactive_socket_recvfrom_op_ext_local.hpp  reactive_socket_recvmsg_op_ext.hpp
implementation/helper/1.78/boost/asio/detail/impl/: socket_ops_ext_local.ipp
implementation/logger/src/: logger_impl.cpp
implementation/routing/src/: routing_manager_base.cpp  routing_manager_impl.cpp  routing_manager_proxy.cpp  routing_manager_stub.cpp
implementation/runtime/src/: application_impl.cpp
implementation/security/src/: security_impl.cpp
implementation/service_discovery/src/: service_discovery_impl.cpp
implementation/utility/src/: utility.cpp
interface/compat/vsomeip/: primitive_types.hpp
interface/vsomeip/: primitive_types.hpp
